# temporal-glare

./: .gitignore  CMakeLists.txt  README.md  fails  temporal-glare.code-workspace
glare/: CMakeLists.txt  TGViewerWidget.cpp  TGViewerWidget.h  TGViewerWindow.cpp  TGViewerWindow.h  TG_Renderer.pro  TemporalGlareRenderer.cpp  TemporalGlareRenderer.h  image.cpp  image.h  main.cpp  render.cl  spectrumMap.h
glare/kernels/: fresnel.cl  reinhard_extended.cl  render.cl
glare/textures/: Untitled-1.ai
glare/tonemap_kernels/: reinhard_extended.cl
include/: ocl_utils.hpp
include/clFFT/: clFFT.version.h  libclFFT.so.2  libclFFT.so.2.14.0
tests/: fft.py  particle_fountain.cl  test.py  test2.py
